# template-saas

./: .gitignore  .graphifyignore  .npmrc  CLAUDE.md  CONTEXT-MAP.md  CONTEXT.md  DESIGN.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  portless.json  turbo.json
.changeset/: README.md  app-service-db-role.md  auth-flow-error-contract.md  auth-slice-1-sign-in.md  auth-slice-2-sign-up.md  auth-slice-3-password-reset.md  auth-slice-4-change-password.md  auth-slice-5-change-email.md  auth-slice-6-oauth.md  config.json  dep-audit-remediation.md  dependency-upgrade-sweep.md  design-system-tokens.md  entitlements-temporal-ledger.md  fix-email-change-delivery.md  fix-email-confirm-implicit-flow.md  fix-introspect-drift-determinism.md  fix-introspect-policy-order.md  fix-signup-enumeration.md  grant-revoke-comps.md  operator-invitation-acceptance.md  operator-mfa-e2e-green.md  operator-mfa-sign-in.md  operator-org-detail-entitlements.md  org-creation-slice-1.md  rename-membership-role-admin-to-manager.md  revoke-sessions-on-password-change.md
.github/: renovate.json
.sandcastle/: .gitignore  CODING_STANDARDS.md  Dockerfile  architect-prompt.md  implement-prompt.md  main.mts  merge-prompt.md  plan-prompt.md  review-prompt.md  verify-prompt.md
scripts/: promote-pr.ts  setup.ts  write-env-local.ts
services/worker-py/: .env.example  Dockerfile  package.json  pyproject.toml
services/worker-py/jobs_schemas/: __init__.py
services/worker-py/src/worker/: health.py  logger.py  main.py  settings.py
services/worker-py/tests/: test_health.py  test_logger.py
(+171 files in other folders)
