[project]
name = "worker-py"
version = "0.0.0"
description = "Python worker for data / ML / scraping jobs."
requires-python = ">=3.11"
dependencies = [
    "tembo-pgmq-python>=0.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "sentry-sdk>=2.18",
    "psycopg[binary]>=3.2",
    "uvicorn>=0.32",
    "starlette>=0.41",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "watchfiles>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
